[feature](headless|chat|webapp) Enhance semantic template deployment with alias support and exemplar loading
Add dimension alias propagation (DimensionConfig.alias → Dimension → DimensionReq → DB),
builtin template initializer, TemplateDeployedEventListener for auto-creating Agents/Plugins,
exemplar loading into vector DB, and frontend template form/deploy improvements.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>